--- a/MyCalendar.MVC/Web.config
+++ b/MyCalendar.MVC/Web.config
@@ -17,7 +17,7 @@
     <add key="DFM.ExceptionHandling.Sentry.Environment" value="Dev" />
   </appSettings>
   <connectionStrings>
-    <add name="SQLConnectionString" connectionString="Data Source=localhost;Initial Catalog=myCalendar;User Id=karim; password=VwXe1Sl7iIvNdgqc;integrated security=false;application name=MyCalendar dev;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="SQLConnectionString" connectionString="Data Source=sql5080.site4now.net;Initial Catalog=DB_A55CDA_mycalendar;User Id=DB_A55CDA_mycalendar_admin;Password=xra63400" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
