Update connection string for release config

--- a/MyCalendar.MVC/Web.Release.config
+++ b/MyCalendar.MVC/Web.Release.config
@@ -24,7 +24,7 @@
   <connectionStrings>
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
              name="SQLConnectionString"
-             connectionString="Data Source=localhost;Initial Catalog=test.MyCalendar;User Id=MyCalendar; password=VwXe1Sl7iIvNdgqc;integrated security=false;application name=MyCalendar production;Connection Timeout=60;Min Pool Size=5;Connection Lifetime=60"
+             connectionString="Data Source=sql5080.site4now.net;Initial Catalog=DB_A55CDA_mycalendar;User Id=DB_A55CDA_mycalendar_admin;Password=xra63400"
              providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
