--- a/MyCalendar.MVC/Web.config
+++ b/MyCalendar.MVC/Web.config
@@ -28,7 +28,7 @@
       </system.Web>
   -->
   <system.web>
-
+    <globalization uiCulture="en-GB" culture="en-GB" />
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
         <add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
