Configurte sentry Urls and environments in web configs

--- a/MyCalendar.MVC/Web.Release.config
+++ b/MyCalendar.MVC/Web.Release.config
@@ -18,8 +18,8 @@
     <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>
   <appSettings>
-    <add key="DFM.ExceptionHandling.Sentry.Url" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://e0d71075d6044a46a3ce2fca6141655f@sentry.io/1473195" />
-    <add key="DFM.ExceptionHandling.Sentry.Environment" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="Test" />
+    <add key="DFM.ExceptionHandling.Sentry.Url" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://9f2dd980d4b04fd0bf1f4fa12cea2c34@sentry.io/5419768" />
+    <add key="DFM.ExceptionHandling.Sentry.Environment" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="Prod" />
   </appSettings>
   <connectionStrings>
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
