--- a/MyCalendar/MyCalendar.csproj
+++ b/MyCalendar/MyCalendar.csproj
@@ -108,9 +108,12 @@
   <ItemGroup>
     <Compile Include="DTOs\Event.cs" />
     <Compile Include="Helpers\Utils.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="Model\Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Repository\EventRepository.cs" />
+    <Compile Include="Service\UserService.cs" />
     <Compile Include="Service\EventService.cs" />
   </ItemGroup>
   <ItemGroup>
