--- a/MyCalendar.MVC/MyCalendar.MVC.csproj
+++ b/MyCalendar.MVC/MyCalendar.MVC.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Calendar.cshtml" />
+    <Content Include="Views\Home\Settings.cshtml" />
     <None Include="Web.Stage.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
