Fix issue with date time conversion when adding/updating events in production and test

--- a/MyCalendar.MVC/Web.Release.config
+++ b/MyCalendar.MVC/Web.Release.config
@@ -16,6 +16,7 @@
   -->
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <globalization culture="en-GB" uiCulture="en-GB" />
   </system.web>
   <appSettings>
     <add key="DFM.ExceptionHandling.Sentry.Url" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://9f2dd980d4b04fd0bf1f4fa12cea2c34@sentry.io/5419768" />
