--- a/MyCalendar/MyCalendar.csproj
+++ b/MyCalendar/MyCalendar.csproj
@@ -108,11 +108,18 @@
   <ItemGroup>
     <Compile Include="DTOs\Event.cs" />
     <Compile Include="Helpers\Utils.cs" />
+    <Compile Include="Model\Tag.cs" />
+    <Compile Include="DTOs\Tags.cs" />
+    <Compile Include="Model\Type.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\TagRepository.cs" />
+    <Compile Include="Repository\TypeRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="Repository\EventRepository.cs" />
+    <Compile Include="Service\TypeService.cs" />
+    <Compile Include="Service\TagService.cs" />
     <Compile Include="Service\UserService.cs" />
     <Compile Include="Service\EventService.cs" />
   </ItemGroup>
