--- a/MyCalendar.MVC/packages.config
+++ b/MyCalendar.MVC/packages.config
@@ -34,10 +34,12 @@
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net472" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net472" />
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net472" />
+  <package id="NodaTime" version="3.0.0" targetFramework="net472" />
   <package id="SharpRaven" version="2.4.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
