--- a/MyCalendar/packages.config
+++ b/MyCalendar/packages.config
@@ -5,9 +5,11 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
+  <package id="NodaTime" version="3.0.0" targetFramework="net472" />
   <package id="SharpRaven" version="2.4.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
