--- a/MyCalendar.MVC/MyCalendar.MVC.csproj
+++ b/MyCalendar.MVC/MyCalendar.MVC.csproj
@@ -4,6 +4,7 @@
   <Import Project="..\packages\Microsoft.Net.Compilers.2.6.1\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.6.1\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <LangVersion>7.1</LangVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>
@@ -229,6 +230,7 @@
     <Compile Include="GlobalExceptionHandler.cs" />
     <Compile Include="MVCModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\OverviewVM.cs" />
     <Compile Include="ViewModels\SchedulerVM.cs" />
     <Compile Include="ViewModels\CalendarVM.cs" />
     <Compile Include="ViewModels\BaseVM.cs" />
@@ -239,6 +241,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap_lumen.min.css" />
     <Content Include="Content\bootstrap_sandstone.min.css" />
+    <Content Include="Content\fullcalendar\main.css" />
+    <Content Include="Content\fullcalendar\main.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -251,6 +255,8 @@
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\fullcalendar\main.js" />
+    <Content Include="Scripts\fullcalendar\main.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
@@ -278,6 +284,8 @@
     <Content Include="Views\Home\_Tags.cshtml" />
     <Content Include="Views\Home\MultiAdd.cshtml" />
     <Content Include="Views\Home\_Status.cshtml" />
+    <Content Include="Views\Home\NewCalendar.cshtml" />
+    <Content Include="Views\Home\Overview.cshtml" />
     <None Include="Web.Stage.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
