--- a/MyCalendar.MVC/Web.config
+++ b/MyCalendar.MVC/Web.config
@@ -15,6 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DFM.ExceptionHandling.Sentry.Url" value="https://9f2dd980d4b04fd0bf1f4fa12cea2c34@sentry.io/5419768" />
     <add key="DFM.ExceptionHandling.Sentry.Environment" value="Dev" />
+    <add key="CronofyClientId" value="hOGxwtuG01Y9cKxzrtuSrcafBPzFF7nS" />
+    <add key="CronofyClientSecret" value="yS7oUIKnKlFpfIOW5OrT4E0LQ_Jq8W9Tp982W_jkrTUs05ai-UF1ICXwSLRbTQbDPzxWbEyc6oGBUrtavTGYOQ" />
+    <add key="RootUrl" value="http://localhost:53822" />
   </appSettings>
   <connectionStrings>
     <add name="SQLConnectionString" connectionString="Data Source=sql5080.site4now.net;Initial Catalog=DB_A55CDA_mycalendar;User Id=DB_A55CDA_mycalendar_admin;Password=xra63400" />
@@ -96,6 +99,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
