--- a/MyCalendar.MVC/Web.Release.config
+++ b/MyCalendar.MVC/Web.Release.config
@@ -20,6 +20,9 @@
   <appSettings>
     <add key="DFM.ExceptionHandling.Sentry.Url" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://9f2dd980d4b04fd0bf1f4fa12cea2c34@sentry.io/5419768" />
     <add key="DFM.ExceptionHandling.Sentry.Environment" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="Prod" />
+    <add key="CronofyClientId" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="hOGxwtuG01Y9cKxzrtuSrcafBPzFF7nS" />
+    <add key="CronofyClientSecret" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="yS7oUIKnKlFpfIOW5OrT4E0LQ_Jq8W9Tp982W_jkrTUs05ai-UF1ICXwSLRbTQbDPzxWbEyc6oGBUrtavTGYOQ" />
+    <add key="RootUrl" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://calendar.karim-ali.co.uk" />
   </appSettings>
   <connectionStrings>
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
