--- a/MyCalendar/packages.config
+++ b/MyCalendar/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Cronofy" version="0.28.1" targetFramework="net472" />
   <package id="Dapper" version="1.60.6" targetFramework="net472" />
   <package id="DFMInfrastructure" version="1.0.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
