--- a/MyCalendar/MyCalendar.csproj
+++ b/MyCalendar/MyCalendar.csproj
@@ -131,12 +131,14 @@
   <ItemGroup>
     <Compile Include="DTOs\DateFilter.cs" />
     <Compile Include="DTOs\Event.cs" />
+    <Compile Include="Enums\CronofyStatus.cs" />
     <Compile Include="Enums\DateFrequency.cs" />
     <Compile Include="Enums\Status.cs" />
     <Compile Include="Enums\TagPrivacy.cs" />
     <Compile Include="Helpers\ChangeLog.cs" />
     <Compile Include="Helpers\LogHelper.cs" />
     <Compile Include="Helpers\Utils.cs" />
+    <Compile Include="Model\ExtCalendarRights.cs" />
     <Compile Include="Model\HoursWorkedInTag.cs" />
     <Compile Include="Model\ResourceWithError.cs" />
     <Compile Include="Model\Tag.cs" />
