--- a/MyCalendar.React/package.json
+++ b/MyCalendar.React/package.json
@@ -43,6 +43,8 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.5.2",
     "fs-extra": "^8.1.0",
+    "gulp": "^4.0.2",
+    "gulp-less": "^4.0.1",
     "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^4.0.0-beta.11",
     "jest": "^24.9.0",
