Enable CORS, modify customers endpoint to include filter which is now used in new order component to be able to search for customers.  Loadash to delay input onchange.

--- a/MyCalendar.MVC/Web.config
+++ b/MyCalendar.MVC/Web.config
@@ -49,7 +49,11 @@
     </authentication>
   </system.web>
   <system.webServer>
-    
+    <!--<httpProtocol>
+     <customHeaders>
+       <add name="Access-Control-Allow-Origin" value="http://localhost:3000" />
+     </customHeaders>
+   </httpProtocol>-->
     <modules>
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
