--- a/MyCalendar.React/package.json
+++ b/MyCalendar.React/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/chart.js": "^2.9.14",
     "@types/html-minifier": "^3.5.3",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.12.12",
     "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.1.5",
@@ -49,6 +50,7 @@
     "html-webpack-plugin": "^4.0.0-beta.11",
     "jest": "^24.9.0",
     "less": "^3.10.3",
+    "lodash": "^4.17.20",
     "moment": "^2.24.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
