Separate loader in its own stylesheet, initial implementation of new order component with initial customer order and registration forms. Make customer search work. Update form icons in scheduler. Add email to customer model.

--- a/MyCalendar.MVC/MyCalendar.MVC.csproj
+++ b/MyCalendar.MVC/MyCalendar.MVC.csproj
@@ -370,6 +370,7 @@
     <Content Include="Content\froala\third_party\spell_checker.css" />
     <Content Include="Content\froala\third_party\spell_checker.min.css" />
     <Content Include="Content\Login.css" />
+    <Content Include="Content\Loader.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
