--- a/MyCalendar.MVC/Web.config
+++ b/MyCalendar.MVC/Web.config
@@ -49,11 +49,13 @@
     </authentication>
   </system.web>
   <system.webServer>
-    <!--<httpProtocol>
+    <httpProtocol>
      <customHeaders>
-       <add name="Access-Control-Allow-Origin" value="http://localhost:3000" />
+       <add name="Access-Control-Allow-Origin" value="*" />
+       <add name="Access-Control-Allow-Methods" value="*" />
+        <add name="Access-Control-Allow-Headers" value="*" />
      </customHeaders>
-   </httpProtocol>-->
+   </httpProtocol>
     <modules>
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
