--- a/MyCalendar.MVC/Web.Release.config
+++ b/MyCalendar.MVC/Web.Release.config
@@ -18,6 +18,15 @@
     <customErrors defaultRedirect="Error.cshtml" mode="Off"/>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>
+    <system.webServer>
+	    <httpProtocol>
+		    <customHeaders>
+			    <add name="Access-Control-Allow-Origin" value="*" />
+			    <add name="Access-Control-Allow-Methods" value="*" />
+			    <add name="Access-Control-Allow-Headers" value="*" />
+		    </customHeaders>
+	    </httpProtocol>
+    </system.webServer>
   <appSettings>
     <add key="DFM.ExceptionHandling.Sentry.Url" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="https://9f2dd980d4b04fd0bf1f4fa12cea2c34@sentry.io/5419768" />
     <add key="DFM.ExceptionHandling.Sentry.Environment" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" value="Prod" />
