--- a/MyCalendar.React/FullCalendar/package.json
+++ b/MyCalendar.React/FullCalendar/package.json
@@ -47,6 +47,7 @@
     "babel-preset-react-app": "^9.1.2",
     "base64-inline-loader": "^1.1.1",
     "base64-loader": "^1.0.0",
+    "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
     "classnames": "^2.2.6",
@@ -63,6 +64,7 @@
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^3.3.5",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
