Add new sidebar menu for calendar with interactive functions/tools to manipulate rendering of events and views. Added pagination, new loader styles, site layout styles, refactoring, add react-bootstrap to calendar app, start implementation of save event component, major calendar improvements and style tweaks. Upgrade to v5

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,4 @@ __pycache__/
 /MyCalendar.MVC/Scripts/dist/fullcalendar/bundle.js.map
 /MyCalendar.MVC/Logs/info.txt
 /MyCalendar.React/FullCalendar/package-lock.json
+/MyCalendar.React/FullCalendar/package-lock.json
