--- a/MyCalendar.React/FullCalendar/package.json
+++ b/MyCalendar.React/FullCalendar/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/karimali831/MyCalendarApp#readme",
   "dependencies": {
-    "@appology/react-components": "^1.1.4",
+    "@appology/react-components": "^1.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
@@ -35,6 +35,7 @@
     "@types/html-minifier": "^3.5.3",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.9",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
